[tool.poetry]
name = "pension"
version = "0.1.0"
description = ""
authors = ["Rob Owen <r.owen767@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
